# mender-stm32l4a6-zephyr-example

./: .gitmodules  CMakeLists.txt  Kconfig  README.md  nucleo_l4a6zg_firmware.overlay  nucleo_l4a6zg_flash0.dtsi  nucleo_l4a6zg_mcuboot.overlay  prj.conf
.github/workflows/: check_headers.sh
cJSON/zephyr/: CMakeLists.txt  Kconfig
components/cJSON/zephyr/: CMakeLists.txt  Kconfig  module.yml
components/msgpack-c/zephyr/: CMakeLists.txt  Kconfig  module.yml
src/: main.c
